# gidd-server

./: .env.default  .env.example  .gitignore  README.md  docker-compose.yml  gh-docker-compose.yml  pyproject.toml  schema.graphql  utils.py
.github/workflows/: ci.yml
apps/common/: admin.py  enums.py  factories.py  forms.py  gh_filters.py  models.py  schema.py  tasks.py  translation.py  types.py  views.py
apps/common/migrations/: 0001_initial.py  0002_alter_staticpage_type.py  0003_auto_20221103_1132.py  0004_alter_staticpage_options.py
apps/common/tests/: test_query.py
apps/country/: admin.py  apps.py  dataloaders.py  enums.py  factories.py  form.py  forms.py  gh_filters.py  models.py  mutations.py  schema.py  serializers.py  translation.py  types.py  views.py
apps/country/migrations/: 0001_initial.py  0002_conflict_disaster.py  0003_auto_20220328_1649.py  0004_auto_20220328_1720.py  0005_auto_20220329_0413.py  0006_auto_20220422_1012.py  0007_auto_20220504_0426.py  0008_essentiallink_title.py  0009_auto_20220509_0451.py  0010_auto_20220509_0618.py  0011_auto_20220509_1027.py  0012_auto_20220509_1037.py  0013_country_bounding_box.py  0014_country_displacement_data_description.py  0015_remove_country_latest_new_displacements_description.py  0016_auto_20220518_0846.py  0017_alter_snapshotfile_options.py  0018_country_good_practice_region.py  0019_country_center_point.py  0020_auto_20220911_0845.py  0021_country_name_en_country_name_fr.py  0022_figureanalysis.py  0023_alter_figureanalysis_country.py  0024_alter_figureanalysis_year_alter_overview_year.py  0025_remove_conflict_country_remove_disaster_country_and_more.py  0026_alter_overview_year.py
apps/country/tests/: test_query.py
apps/country/tests.py/: test_query.py
apps/good_practice/: admin.py  apps.py  dataloaders.py  enums.py  factories.py  form.py  forms.py  gh_filters.py  models.py  mutations.py  schema.py  serializers.py  translation.py  types.py
apps/good_practice/fixtures/: success_factors_fixture.json
apps/good_practice/migrations/: 0001_initial.py  0002_alter_goodpractice_description.py  0003_auto_20220524_0803.py  0003_auto_20220531_0852.py  0004_auto_20220525_0758.py  (+25 more)
apps/old_gidd/: apps.py  models.py
apps/templates/: generic_email.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
config/: celery.py  context_processor.py  custom_fields.py  graphql.py  hcaptcha.py  mutations.py  schema.py  sentry.py  settings.py  storage_backends.py  tests.py  urls.py  utils.py
config/translation/: auto.py  aws.py
config/utils/: mail.py
scripts/: run_develop.sh  run_prod.sh
strawberry_utils/: error_types.py
(+35 files in other folders)
